--- a/admin.html
+++ b/admin.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rooms</title>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="admin.css">
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/admin.css">
 </head>
 <body>
     <header>
@@ -68,7 +68,7 @@
     </div>
     </main>
 
-    <script src="admin.js" defer></script>
-    <script src="scripts.js" defer></script>
+    <script src="js/admin.js" defer></script>
+    <script src="js/scripts.js" defer></script>
 </body>
 </html>
