--- a/booking.html
+++ b/booking.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Booking</title>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="booking.css">
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/booking.css">
 </head>
 <body>
     <header>
@@ -67,7 +67,7 @@
         </section>
     </main>
 
-    <script src="booking.js" defer></script>
-    <script src="scripts.js" defer></script>
+    <script src="js/booking.js" defer></script>
+    <script src="js/scripts.js" defer></script>
 </body>
 </html>
