--- a/rooms.html
+++ b/rooms.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rooms</title>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="rooms.css">
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/rooms.css">
 </head>
 <body>
     <header>
@@ -43,7 +43,7 @@
     <!-- Dynamically import Rooms information -->
     </main>
 
-    <script src="rooms.js" defer></script>
-    <script src="scripts.js" defer></script>
+    <script src="js/rooms.js" defer></script>
+    <script src="js/scripts.js" defer></script>
 </body>
 </html>
