--- a/login.html
+++ b/login.html
@@ -42,15 +42,12 @@
             <h2>Login</h2>
             <form action="#" method="post" onsubmit="return validateLoginForm()">
                 <div class="input-group">
-                    <label for="username">Username:</label>
-                    <input type="text" id="username" name="username">
+                    <input type="text" name="username" placeholder="Username" required>
                 </div>
                 <div class="input-group">
-                    <label for="password">Password: </label>
-                    <input type="password" id="password" name="password">
-                </div>
+                    <input type="password" name="password" placeholder="Password" required>
+                </div>         
                 <div class="input-group">
-                    <br>
                     <button type="submit">Login</button>
                 </div>
             </form>
