--- a/login.html
+++ b/login.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/login.css">
     <script src="js/scripts.js" defer></script>
+    <script src="js/login.js" defer></script>
 </head>
 <body>
     <header>
@@ -51,7 +52,6 @@
                     <button type="submit">Login</button>
                 </div>
             </form>
-            <p><a href="forgot.html">Forgot your password?</a></p>
     </main>
 </body>
 </html>
