--- a/booking.html
+++ b/booking.html
@@ -53,6 +53,20 @@
         </section>
     </main>
 
+    <div id="bookingPopup" class="popup" style="display:none;">
+        <div class="popup-content">
+            <span class="close" onclick="closePopup()">&times;</span>
+            <h2>Book Room</h2>
+            <form id="bookingForm">
+                <label for="bookingDate">Date:</label>
+                <input type="date" id="bookingDate" name="bookingDate" required>
+                <input type="hidden" id="bookingRoomId" name="bookingRoomId">
+                <button type="submit">Submit</button>
+            </form>
+        </div>
+    </div>
+    
+
     <script src="js/booking.js" defer></script>
     <script src="js/scripts.js" defer></script>
 </body>
