--- a/settings.html
+++ b/settings.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/settings.css">
     <script src="js/scripts.js" defer></script>
 </head>
 <body>
@@ -37,7 +38,99 @@
     </div>
 
     <main class="main-content">
-        
+                <table>
+                    <tr>
+                        <th>Label</th>
+                        <th>Status</th>
+                        <th>Form</th>
+                    </tr>
+                    <tr>
+                        <td>Role:</td>
+                        <td>role_id*</td>
+                        <td>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>First Name:</td>
+                        <td>firstname*</td>
+                        <td>
+                            <form action="YOUR_ENDPOINT_HERE" method="post">
+                                <input type="text" name="firstname" placeholder="Change First Name">
+                                <input type="submit" class="update-button" value="Update">
+                            </form>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>Last Name:</td>
+                        <td>lastname*</td>
+                        <td>
+                            <form action="YOUR_ENDPOINT_HERE" method="post">
+                                <input type="text" name="lastname" placeholder="Change Last Name">
+                                <input type="submit" class="update-button" value="Update">
+                            </form>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>Email:</td>
+                        <td>email*</td>
+                        <td>
+                            <form action="YOUR_ENDPOINT_HERE" method="post">
+                                <input type="text" name="email" placeholder="Change Email">
+                                <input type="submit" class="update-button" value="Update">
+                            </form>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>Password:</td>
+                        <td>password*</td>
+                        <td>
+                            <form action="YOUR_ENDPOINT_HERE" method="post">
+                                <input type="text" name="password" placeholder="Change Password">
+                                <input type="submit" class="update-button" value="Update">
+                            </form>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>Address Line 1:</td>
+                        <td>street*</td>
+                        <td>
+                            <form action="YOUR_ENDPOINT_HERE" method="post">
+                                <input type="text" name="street" placeholder="Change Street">
+                                <input type="submit" class="update-button" value="Update">
+                            </form>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>Address Line 2:</td>
+                        <td>city*</td>
+                        <td>
+                            <form action="YOUR_ENDPOINT_HERE" method="post">
+                                <input type="text" name="city" placeholder="Change City">
+                                <input type="submit" class="update-button" value="Update">
+                            </form>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>Address Line 3:</td>
+                        <td>country*</td>
+                        <td>
+                            <form action="YOUR_ENDPOINT_HERE" method="post">
+                                <input type="text" name="country" placeholder="Change Country">
+                                <input type="submit" class="update-button" value="Update">
+                            </form>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>Postal Code:</td>
+                        <td>postal_code*</td>
+                        <td>
+                            <form action="YOUR_ENDPOINT_HERE" method="post">
+                                <input type="text" name="postal_code" placeholder="Change Postal Code">
+                                <input type="submit" class="update-button" value="Update">
+                            </form>
+                        </td>
+                    </tr>
+                </table>
     </main>
 </body>
 </html>
