Nav bar final touches

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/styles.css">
     <script src="js/scripts.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
 <body>
     <header>
@@ -23,12 +24,12 @@
 
     <nav>
         <ul>
-            <a href="#" class="closebtn" onclick="closeNav()">&times;</a>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="booking.html">Book a Room</a></li>
-            <li><a href="rooms.html">Full room list</a></li>
-            <li><a href="admin.html">Add a Room</a></li>
-            <li><a href="settings.html">User Settings</a></li>
+          <a href="#" class="closebtn" onclick="closeNav()">&times;</a>
+          <li><a href="index.html"><i class="fas fa-home"></i> Home</a></li>
+          <li><a href="booking.html"><i class="fas fa-bed"></i> Book a Room</a></li>
+          <li><a href="rooms.html"><i class="fas fa-list"></i> Full Room List</a></li>
+          <li><a href="admin.html"><i class="fas fa-plus"></i> Add a Room</a></li>
+          <li><a href="settings.html"><i class="fas fa-cog"></i> User Settings</a></li>
         </ul>
     </nav>
     
