--- a/settings.html
+++ b/settings.html
@@ -17,7 +17,9 @@
                 <div class="bar"></div>
            </div>
         </div>
-        <a class="header-title" href="index.html">Data Dashboard</a>
+        <a class="header-title" href="index.html">
+            <img src="assets/DCUROOMS.png" alt="DCU Rooms Logo">
+        </a>   
         <a class="login" href="login.html">Login</a> 
     </header>
 
