Fixed sidebar icons for all pages

--- a/info.html
+++ b/info.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <script src="js/scripts.js" defer></script>
 </head>
 <body>
@@ -26,7 +27,7 @@
         <ul>
           <a href="#" class="closebtn" onclick="closeNav()">&times;</a>
           <li><a href="index.html"><i class="fas fa-home"></i> Home</a></li>
-          <li><a href="booking.html"><i class="fas fa-bed"></i> Book a Room</a></li>
+          <li><a href="booking.html"><i class="fas fa-calendar-alt"></i> Book a Room</a></li>
           <li><a href="rooms.html"><i class="fas fa-list"></i> Full Room List</a></li>
           <li><a href="admin.html"><i class="fas fa-plus"></i> Add a Room</a></li>
           <li><a href="settings.html"><i class="fas fa-cog"></i> User Settings</a></li>
