--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <ul>
           <a href="#" class="closebtn" onclick="closeNav()">&times;</a>
           <li><a href="index.html"><i class="fas fa-home"></i> Home</a></li>
-          <li><a href="booking.html"><i class="fas fa-bed"></i> Book a Room</a></li>
+          <li><a href="booking.html"><i class="fas fa-calendar-alt"></i> Book a Room</a></li>
           <li><a href="rooms.html"><i class="fas fa-list"></i> Full Room List</a></li>
           <li><a href="admin.html"><i class="fas fa-plus"></i> Add a Room</a></li>
           <li><a href="settings.html"><i class="fas fa-cog"></i> User Settings</a></li>
