--- a/login.html
+++ b/login.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/login.css">
     <script src="js/scripts.js" defer></script>
     <script src="js/login.js" defer></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
 <body>
     <header>
@@ -28,7 +29,7 @@
         <ul>
           <a href="#" class="closebtn" onclick="closeNav()">&times;</a>
           <li><a href="index.html"><i class="fas fa-home"></i> Home</a></li>
-          <li><a href="booking.html"><i class="fas fa-bed"></i> Book a Room</a></li>
+          <li><a href="booking.html"><i class="fas fa-calendar-alt"></i> Book a Room</a></li>
           <li><a href="rooms.html"><i class="fas fa-list"></i> Full Room List</a></li>
           <li><a href="admin.html"><i class="fas fa-plus"></i> Add a Room</a></li>
           <li><a href="settings.html"><i class="fas fa-cog"></i> User Settings</a></li>
