--- a/index.html
+++ b/index.html
@@ -34,10 +34,16 @@
           <li><a href="settings.html"><i class="fas fa-cog"></i> User Settings</a></li>
         </ul>
     </nav>
-    
-    <div class="user-info-bar">
-        <div class="user-info-content">Logged in as :<div class="user-info-name">John</div></div>
-        <div class="user-info-content">Role :<div class="user-info-role">Admin</div></div>
+
+    <div class="user-info-container">
+        <div class="user-info-bar">
+            <div class="user-info-content">Logged in as </div>
+            <div class="user-info-content">Role </div>
+        </div>
+        <div class="user-info-bar-2">
+            <div class="user-info-name"> John</div>
+            <div class="user-info-role"> Admin</div>
+        </div>
     </div>
 
     <main class="main-content">
