--- a/login.html
+++ b/login.html
@@ -36,9 +36,15 @@
         </ul>
     </nav>
     
-    <div class="user-info-bar">
-        <div class="user-info-content">Logged in as :<div class="user-info-name">John</div></div>
-        <div class="user-info-content">Role :<div class="user-info-role">Admin</div></div>
+    <div class="user-info-container">
+        <div class="user-info-bar">
+            <div class="user-info-content">Logged in as </div>
+            <div class="user-info-content">Role </div>
+        </div>
+        <div class="user-info-bar-2">
+            <div class="user-info-name"> John</div>
+            <div class="user-info-role"> Admin</div>
+        </div>
     </div>
 
     <main class="main-content">
