--- a/settings.html
+++ b/settings.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>User Settings</title>
+    <link rel="icon" href="assets/faviconv1.png" type="image/png">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/settings.css">
     <script src="js/scripts.js" defer></script>
@@ -49,9 +50,9 @@
     <main class="main-content">
                 <table>
                     <tr>
-                        <th>Label</th>
-                        <th>Status</th>
-                        <th>Form</th>
+                        <th>Setting</th>
+                        <th>Current Value</th>
+                        <th>Change Value</th>
                     </tr>
                     <tr>
                         <td>Role:</td>
