backend friendly change

--- a/login.html
+++ b/login.html
@@ -43,8 +43,8 @@
             <div class="user-info-content">Role </div>
         </div>
         <div class="user-info-bar-2">
-            <div class="user-info-name"> John</div>
-            <div class="user-info-role"> Admin</div>
+            <div class="user-info-name"> firstname* lastname*</div>
+            <div class="user-info-role"> role*</div>
         </div>
     </div>
 
