--- a/booking.html
+++ b/booking.html
@@ -64,7 +64,7 @@
         <div class="popup-content">
             <span class="close" onclick="closePopup()">&times;</span>
             <h2>Book Room</h2>
-            <form id="bookingForm">
+            <form method="post" id="bookingForm">
                 <label for="bookingDate">Date:</label>
                 <input type="date" id="bookingDate" name="bookingDate" required>
                 <div id="timeSelectionContainer" style="display: none;">
