--- a/admin.html
+++ b/admin.html
@@ -49,7 +49,7 @@
     <main class="main-content">
         <div class="form-container">
         <h2>Add New Room</h2>
-        <form id="addRoomForm">
+        <form method="post" id="addRoomForm">
             <div class="form-group">
                 <label for="roomName">Room Name:</label>
                 <input type="text" id="roomName" name="roomName" required>
