FINAL(- user settings db, login db, settings db

--- a/admin.html
+++ b/admin.html
@@ -41,8 +41,8 @@
             <div class="user-info-content">Role </div>
         </div>
         <div class="user-info-bar-2">
-            <div class="user-info-name"> firstname* lastname*</div>
-            <div class="user-info-role"> role*</div>
+            <div class="user-info-name" id="userFullName"> </div>
+            <div class="user-info-role" id="userRole"> </div>
         </div>
     </div>
     
